finished usercontroller
