# high_test_task/src/main/resources/api.yaml
@@ -83,7 +83,10 @@ paths:
         "200":
           schema:
             type: integer
+            format: int64
           description: Unique id of the saved user.
+        "400":
+          description: Bad userStatus.
   /user/{userId}:
     get:
       tags:
@@ -107,7 +110,7 @@ paths:
             $ref: "#/definitions/User"
         "404":
           description: User not found
-  /user/{userId}/status:
+  /user/status:
     post:
       tags:
         - user
@@ -117,18 +120,12 @@ paths:
       consumes:
         - application/json
       parameters:
-        - name: userId
-          in: path
-          description: The unique id of the user, whose status will be changed.
-          required: true
-          type: integer
-          format: int64
         - name: body
           in: body
-          description: Body contains user new user status.
+          description: Body contains user id and new user status.
           required: true
           schema:
-            $ref: "#/definitions/Status"
+            $ref: "#/definitions/ChangeStatusRequest"
       produces:
         - application/json
       responses:
@@ -138,10 +135,17 @@ paths:
             $ref: "#/definitions/ChangeStatusResponse"
         "404":
           description: User not found
+        "400":
+          description: Bad userStatus.
 
 definitions:
   User:
     type: object
+    required:
+      - username
+      - email
+      - avatarUrl
+      - userStatus
     properties:
       id:
         type: integer
@@ -156,10 +160,23 @@ definitions:
       userStatus:
         $ref: "#/definitions/Status"
         description: User status online / offline
-    xml:
-      name: User
+  ChangeStatusRequest:
+    type: object
+    required:
+      - id
+      - newStatus
+    properties:
+      id:
+        type: integer
+        format: int64
+      newStatus:
+        $ref: '#/definitions/Status'
   ChangeStatusResponse:
     type: object
+    required:
+      - id
+      - oldStatus
+      - newStatus
     properties:
       id:
         type: integer
